commit the first Push

--- a/notebooks/03_silver_transform.ipynb
+++ b/notebooks/03_silver_transform.ipynb
@@ -1,13 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f5a073f2-7380-40a1-b261-b634eeed18e2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# <notebook name>\n",
+    "Purpose: short description\n",
+    "Author: Janak\n",
+    "Date: YYYY-MM-DD\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "fa990d54-d448-44e0-9dc5-e5c93be944a5",
+     "nuid": "085cb1a0-e701-4faf-8e9f-806a2fca032b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -30,7 +49,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "01_raw_ingestion.ipynb",
+   "notebookName": "03_silver_transform",
    "widgets": {}
   },
   "language_info": {
